--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ body {
   line-height: 1.5;
   font-weight: 300;
   color: rgba(0,0,0,0.6);
-  background:url(./img/bodyBg.jpg) no-repeat;
+  background:url(/assets/img/bodyBg.jpg) no-repeat;
 /*background-image: linear-gradient(120deg, #155799, #159957) !important;*/
   -webkit-text-size-adjust: 100%; }
 
