--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- <header class="site-header">
+<header class="site-header">
 	<div class="container">
 		<div class="row">
 			<nav class="navbar navbar-default" role="navigation">
@@ -44,4 +44,4 @@
 			</nav>
 		</div>
 	</div>
-</header> -->
+</header>
