--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 					         <span class="icon-bar"></span>
 					      </button>
 					      <div class="sitehome">
-						 	<a href="{{ site.baseurl }}/" title="首页"><img src="http://townwang.com/assets/img/logo.png" alt=""></a>
+						 	<a href="./index.htm" title="首页">心中放歌</a>
 						</div>
 				   </div>
 				  
@@ -18,16 +18,16 @@
 				  <div class="col-md-6 col-lg-6 hidden-xs hidden-sm ">		  			
 							<nav class="site-nav">
 								        <ul class="nav nav-pills">
-									<li class="select"><a class="page-link pjaxlink" href="/pages/handbook.html">手册</a></li>
-									<li class="select"><a class="page-link pjaxlink" href="/pages/tags.html">文章</a></li>
-									<li class="select"><a class="page-link pjaxlink" href="/pages/resume.html">简历</a></li>
+									<li class="select"><a class="page-link pjaxlink" href="/pages/handbook.html">音乐</a></li>
+									<li class="select"><a class="page-link pjaxlink" href="/pages/tags.html">博文</a></li>
+									<li class="select"><a class="page-link pjaxlink" href="/pages/resume.html">相册</a></li>
 									<li class="select"><a class="page-link pjaxlink" href="/pages/about.html">关于</a></li>
 								        </ul>
 							</nav>
 				  </div>
 				  
 				   <div class="col-md-3 col-lg-3 hidden-xs hidden-sm">
-              <input type="text"  class="search" placeholder="善用搜索">
+              <input type="text"  class="search" placeholder="心中放歌的世界">
               <script type="text/javascript" src="/assets/js/search.js"></script>
  </div> 
 				   
