--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 					         <span class="icon-bar"></span>
 					      </button>
 					      <div class="sitehome">
-						 	<a href="./index.htm" title="首页">心中放歌</a>
+						 	<a href="{{ site.baseurl }}/" title="首页">心中放歌</a>
 						</div>
 				   </div>
 				  
