--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
-background-color: rgba(253, 253, 255, 0.51);
+background:transparent;
   padding: 0; }
 /**
  *  BootStrap basic elements
